--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,22 @@
     <title>Hobbyist</title>
 </head>
 <body>
-<h1>Welcome To Our Page, [[${username}]]</h1>
+<h1>Welcome to Our Page, [[${username}]] please sign up to have access</h1>
+
+<div>
+
+<form action="/signup" method="POST">
+    <label for="lastName">Last Name</label>
+    <input type="text" name="lastName" required>
+    <label for="firstName">First Name</label>
+    <input type="text" name="firstName" required>
+    <label for="username">Username</label>
+    <input type="text" name="username" required>
+    <label for="password">Password</label>
+    <input type="password" name="password" required>
+    <input type="submit" value="submit">
+</form>
+</div>
+
 </body>
 </html>
