--- a/src/main/resources/templates/allProducts.html
+++ b/src/main/resources/templates/allProducts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>All Products</title>
-<link rel="stylesheet" href="../static/style.css">
+<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 <h1>Products</h1>
@@ -41,7 +41,7 @@
         <br>
         <br>
         <br>
-        <li><input type="checkbox" class="productImage" src="../../resources/images/Woodcarving.jpg" onclick="shade(this)"/>
+        <li><input type="checkbox" class="productImage" src="/images/Woodcarving.jpg" onclick="shade(this)"/>
         <li>Description</li>
         <ul>
             <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mus mauris vitae ultricies leo integer malesuada. Nisl nisi scelerisque eu ultrices vitae auctor. Id eu nisl nunc mi ipsum faucibus vitae aliquet. Viverra maecenas accumsan lacus vel facilisis volutpat est velit egestas.</li>
