--- a/src/main/resources/templates/allProducts.html
+++ b/src/main/resources/templates/allProducts.html
@@ -7,40 +7,43 @@
 </head>
 <body>
 <h1>Products</h1>
+
 <ul id="parent">
     <div class="productDiv">
     <ul class="productDescription" id="leatherWorking">
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
         <li><input type="submit" class="productImage"  onclick="shade(this)"/>
         </li>
         <li id="title">Title</li>
     
             <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mus mauris vitae ultricies leo integer malesuada. Nisl nisi scelerisque eu ultrices vitae auctor. Id eu nisl nunc mi ipsum faucibus vitae aliquet. Viverra maecenas accumsan lacus vel facilisis volutpat est velit egestas.</li>
-       
     </ul>
     </div>
+
+    <form action="/allProducts" method="POST">
+        <input type="hidden" th:value="${userIdWeAreVisiting}" name="id">
     <div class="productDiv">
     <li>Woodcarving</li>
     <ul class="productDescription" id="woodCarving">
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
         <li><input type="submit" class="productImage" src="/images/Woodcarving.jpg" onclick="shade(this)"/>
         <li>Description</li>
         <ul>
@@ -48,6 +51,8 @@
         </ul>
     </ul>
     </div>
+    </form>
+
     <div class="productDiv">
     <li>Pyrography</li>
     <ul class="productDescription" id="pyrography">
