products saving in the database

--- a/src/main/resources/templates/allProducts.html
+++ b/src/main/resources/templates/allProducts.html
@@ -29,7 +29,7 @@
     </ul>
     </div>
 
-    <form action="/allProducts" method="POST">
+    <form action="/myPreferences" method="POST">
         <input type="hidden" th:value="${userIdWeAreVisiting}" name="id">
     <div class="productDiv">
     <li>Woodcarving</li>
@@ -53,6 +53,9 @@
     </div>
     </form>
 
+    <form action="/myPreferences" method="POST">
+        <input type="hidden" th:value="${userIdWeAreVisiting}" name="id">
+
     <div class="productDiv">
     <li>Pyrography</li>
     <ul class="productDescription" id="pyrography">
@@ -73,7 +76,12 @@
         </ul>
     </ul>
     </div>
-    <div class="productDiv">
+    </form>
+
+    <form action="/myPreferences" method="POST">
+        <input type="hidden" th:value="${userIdWeAreVisiting}" name="id">
+
+        <div class="productDiv">
     <li>Bonkei</li>
     <ul class="productDescription" id="bonkei">
         <br>
@@ -93,7 +101,11 @@
         </ul>
     </ul>
     </div>
-    <div class="productDiv">
+    </form>
+
+    <form action="/myPreferences" method="POST">
+        <input type="hidden" th:value="${userIdWeAreVisiting}" name="id">
+        <div class="productDiv">
     <li>Bonsai</li>
     <ul class="productDescription" id="bonsai">
         <br>
@@ -114,7 +126,11 @@
         </ul>
     </ul>
     </div>
-    <div class="productDiv">
+    </form>
+
+    <form action="/myPreferences" method="POST">
+        <input type="hidden" th:value="${userIdWeAreVisiting}" name="id">
+        <div class="productDiv">
     <li>Fitness</li>
     <ul class="productDescription" id="fitness">
         <br>
@@ -134,7 +150,11 @@
         </ul>
     </ul>
     </div>
-    <div class="productDiv">
+    </form>
+
+    <form action="/myPreferences" method="POST">
+        <input type="hidden" th:value="${userIdWeAreVisiting}" name="id">
+        <div class="productDiv">
     <li>Sewing</li>
     <ul class="productDescription" id="sewing">
         <br>
@@ -155,7 +175,11 @@
         </ul>
     </ul>
     </div>
-    <div class="productDiv">
+    </form>
+
+    <form action="/myPreferences" method="POST">
+        <input type="hidden" th:value="${userIdWeAreVisiting}" name="id">
+        <div class="productDiv">
     <li>Candle Making</li>
     <ul class="productDescription" id="candleMaking">
         <br>
@@ -176,7 +200,11 @@
         </ul>
     </ul>
     </div>
-    <div class="productDiv">
+    </form>
+
+    <form action="/myPreferences" method="POST">
+        <input type="hidden" th:value="${userIdWeAreVisiting}" name="id">
+        <div class="productDiv">
     <li>Jewelry Making</li>
     <ul class="productDescription" id="jewelry">
         <br>
@@ -197,7 +225,11 @@
         </ul>
     </ul>
     </div>
-    <div class="productDiv">
+    </form>
+
+    <form action="/myPreferences" method="POST">
+        <input type="hidden" th:value="${userIdWeAreVisiting}" name="id">
+        <div class="productDiv">
     <li>Puzzles</li>
     <ul class="productDescription" id="puzzles">
         <br>
@@ -217,7 +249,11 @@
         </ul>
     </ul>
     </div>
-    <div class="productDiv">
+    </form>
+
+    <form action="/myPreferences" method="POST">
+        <input type="hidden" th:value="${userIdWeAreVisiting}" name="id">
+        <div class="productDiv">
     <li>Essential Oils</li>
     <ul class="productDescription" id="essentialOils">
         <br>
@@ -238,7 +274,11 @@
         </ul>
     </ul>
     </div>
-    <div class="productDiv">
+    </form>
+
+    <form action="/myPreferences" method="POST">
+        <input type="hidden" th:value="${userIdWeAreVisiting}" name="id">
+        <div class="productDiv">
     <li>Tea</li>
     <ul class="productDescription" id="tea">
         <br>
@@ -259,6 +299,7 @@
         </ul>
     </ul>
     </div>
+    </form>
 </ul>
 </section>
 
