--- a/src/main/resources/templates/myPreferences.html
+++ b/src/main/resources/templates/myPreferences.html
@@ -1,13 +1,13 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>My Preferences</title>-->
-<!--</head>-->
-<!--<body>-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>My Preferences</title>
+</head>
+<body>
 
-<!--<h1>This is [[${userWeAreVisiting.username}]]'s detail page, you are on their page [[${loggedInUser.username}]]</h1>-->
+<h1>This is [[${loggedInUser.firstName}]]'s detail page, you are on their page [[${userWeVisited.username}]]</h1>
 
 
-<!--</body>-->
-<!--</html>-->
+</body>
+</html>
