--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
     <label for="username">Username</label>
     <input type="text" name="username" placeholder="Your username...">
     <label for="password">Password</label>
-    <input type="password" placeholder="Your password...">
+    <input type="password" placeholder="Your password..." name="password">
     <input type="submit" value="submit">
 </form>
 
