created objects for the products, inserted in product list

--- a/src/main/resources/templates/allProducts.html
+++ b/src/main/resources/templates/allProducts.html
@@ -10,16 +10,13 @@
 
 
 
-<ul>
-    <li th:each="product: ${productsList}" >
+
+    <ul th:each="product: ${productsList}" >
         <p>[[${product.title}]]</p>
         <p>anything</p>
 
-    </li>
-    <li>
-        test list
-    </li>
-</ul>
+    </ul>
+
 
 
 
@@ -39,7 +36,7 @@
 <!--        <li><input type="submit" class="productImage"  onclick="shade(this)"/>-->
 <!--        </li>-->
 <!--        <li id="title">Title</li>-->
-<!--    -->
+
 <!--            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mus mauris vitae ultricies leo integer malesuada. Nisl nisi scelerisque eu ultrices vitae auctor. Id eu nisl nunc mi ipsum faucibus vitae aliquet. Viverra maecenas accumsan lacus vel facilisis volutpat est velit egestas.</li>-->
 <!--    </ul>-->
 <!--    </div>-->
