--- a/src/main/resources/templates/myPreferences.html
+++ b/src/main/resources/templates/myPreferences.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>My Preferences</title>
@@ -11,11 +12,16 @@
 <h1>These are the list of products you are subscribed to</h1>
 <div th:each="currentUser : ${allUsers}">
     <p>[[${currentUser.username}]] [[${currentUser.firstName}]]</p>
+
 </div>
 
 <ul>
     <li th:each="preference: ${loggedInUser.savedProductsList}">
         <p th:text="${preference.title}">Hey</p>
+
+        <form th:action="'/myPreferences/delete/' + ${preference.Id}" method = "POST">
+            <button type="submit">Delete</button>
+        </form>
 
 
     </li>
