working on reviews

--- a/src/main/resources/templates/allProducts.html
+++ b/src/main/resources/templates/allProducts.html
@@ -20,6 +20,7 @@
         </div>
         <p>[[${product.title}]]</p>
         <p>anything</p>
+        <input type="button" onclick="/review" class="button" value="Reviews">
 
     </li>
 </ul>
@@ -27,5 +28,8 @@
     <button name="Subscribe" type="submit" class="button">Subscribe</button>
 
 </form>
+<!--<form action="/reviews" method="POST" id="reviewsId">-->
+<!--    <button name="reviews" type="submit" class="button">Reviews</button>-->
+<!--</form>-->
 </body>
 </html>
