--- a/src/main/resources/templates/myPreferences.html
+++ b/src/main/resources/templates/myPreferences.html
@@ -22,7 +22,9 @@
         <form th:action="'/myPreferences/delete/' + ${preference.Id}" method = "POST">
             <button type="submit">Delete</button>
         </form>
-
+        <form th:action="'/myPreferences/addToCart/' + ${preference.Id}" method = "POST">
+            <button type="submit">Make Current Box</button>
+        </form>
 
     </li>
 </ul>
