--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -117,6 +117,17 @@ label{
 #CandleMakingLabel{
    background-image: url(../images/CandleMaking.jpg);
 }
+#SoccerLabel{
+   background-image: url(../images/soccer.jpg);
+}
+#HikingLabel{
+   background-image: url(../images/hiking.jpg);
+}
+#KnittingLabel{
+   background-image: url(../images/knitting.jpg);
+}
+
+
 
 #JewelryMakingLabel{
    background-image: url(../images/Jewelry.jpg);
