--- a/src/main/resources/templates/reviews.html
+++ b/src/main/resources/templates/reviews.html
@@ -12,8 +12,8 @@
 
 <h1>Product Reviews</h1>
 
-<div th:each="review : ${reviews}">
-    <a th:href="'/reviews/'+${review.title}">Hey</a>
+<div th:each="review : ${reviewedProduct}">
+   Great product <p>[[${review.title}]]</p>
 </div>
 </body>
 </html>
