reviews added to constructor, general cleanup

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -12,7 +12,6 @@
 <div th:replace="fragments/header :: header">...</div>
 
 
-
 <h1>Your Chosen Box For This Month</h1>
 
 <center>
@@ -37,7 +36,7 @@
 
 
 
-
+</div>
 
 
 
