--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<h1>Welcome to Our Page, [[${username}]] please sign up to have access</h1>
+<h1>Welcome to Hobbyist! Please log in or sign up to have access.</h1>
 
 <div class="login">
 
