--- a/src/main/resources/static/css/loginStyle.css
+++ b/src/main/resources/static/css/loginStyle.css
@@ -20,9 +20,9 @@ body {
     width: 100%;
     height:100%;
     font-family: 'Open Sans', sans-serif;
-    background: linear-gradient(-45deg, #13547a, #80d0c7, #23a6d5, #23d5ab);
+    background: white;
     background-size: 400% 800%;
-    animation: gradient 15s ease infinite; );
+
 }
 @keyframes gradient {
     0% {
