--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,8 +1,8 @@
 /*Gradient Background*/
 body {
-   background: linear-gradient(-45deg, #13547a, #80d0c7, #23a6d5, #23d5ab);
+   background: white;
    background-size: 400% 800%;
-   animation: gradient 15s ease infinite;
+
 }
 
 @keyframes gradient {
