--- a/src/main/resources/templates/reviews.html
+++ b/src/main/resources/templates/reviews.html
@@ -14,7 +14,12 @@
 <h1>Product Reviews</h1>
 
 <div th:each="review : ${reviewedProduct}">
-   Great product <p>[[${review.title}]]</p>
+    Great product <p>[[${review.img}]]</p>
+    Great product <p>[[${review.title}]]</p>
+    Great product <p>[[${review.productDescription}]]</p>
+
+
+
 </div>
 </body>
 </html>
