added description in preferences

--- a/src/main/resources/templates/reviews.html
+++ b/src/main/resources/templates/reviews.html
@@ -17,9 +17,7 @@
     Great product <p>[[${review.img}]]</p>
     Great product <p>[[${review.title}]]</p>
     Great product <p>[[${review.productDescription}]]</p>
-
-
-
+    <p>[[${review.ProductReview}]]</p>
 </div>
 </body>
 </html>
