--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Hobbyist</title>
-    <link rel="stylesheet" href="/css/loginStyle.css">
-
+    <title> Reviews </title>
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/LoginStyle.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+<div th:replace="fragments/header :: header">...</div>
 <div class="login">
 <form action="/login" method="POST">
     <label for="username">Username</label>
