each product shows once for reveiws

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,13 +1,12 @@
 <header class="header" th:fragment="header">
     <div class="navWrapper" id="home">
         <div class=" clearfix">
-            <h2 class="companyName">Hobbyist</h2>
+            <a href="/"><h2 class="companyName">Hobbyist</h2></a>
             <nav class="mainNav clearfix">
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/products" class="smoothScroll">Products</a></li>
                     <li><a href="/myPreferences" class="smoothScroll">Preferences</a></li>
-
                     <li><a href="/logout" class="smoothScroll">Log Out</a></li>
                 </ul>
             </nav>
