--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title> Reviews </title>
     <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/LoginStyle.css">
+    <link rel="stylesheet" href="/css/loginStyle.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
     <input type="password" placeholder="Your password..." name="password" required>
     <button type="submit" class="btn btn-primary btn-block btn-large">Log In</button>
 </form>
-   <form action="/signup"> <button  class="btn btn-primary btn-block btn-large">Create Account</button></form>
+   <form action="/"> <button  class="btn btn-primary btn-block btn-large">Create Account</button></form>
 
 </div>
 </body>
