--- a/src/main/resources/templates/reviews.html
+++ b/src/main/resources/templates/reviews.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title> Reviews </title>
     <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/LoginStyle.css">
+    <link rel="stylesheet" href="/css/loginStyle.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -14,10 +14,10 @@
 <h1>Product Reviews</h1>
 
 
-<div th:each="review : ${reviewedProduct}">
+<div>
 
-    Reviews: <p>[[${review.ProductReview}]]</p>
-    <div th:id="${review.title + 'Label'}" class="prefProductClass">
+    Reviews: <p>[[${reviewedProduct.ProductReview}]]</p>
+    <div th:id="${reviewedProduct.title + 'Label'}" class="prefProductClass">
     </div>
 </div>
 </body>
