--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Hobbyist</title>
     <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/LoginStyle.css">
+    <link rel="stylesheet" href="/css/loginStyle.css">
     <link rel="stylesheet" href="/css/style.css">
 
 </head>
