added a constraint to let users know when their password/username is incorrect

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,6 +11,10 @@
 
 <div th:replace="fragments/header :: header">...</div>
 
+<div th:if="${param.error}">
+    <p>Please try again. Your password/username might be incorrect</p>
+</div>
+
 <div class="login">
 <form action="/login" method="POST">
     <label for="username">Username</label>
