--- a/src/main/resources/templates/myPreferences.html
+++ b/src/main/resources/templates/myPreferences.html
@@ -5,7 +5,7 @@
     <title>My Preferences</title>
     <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/LoginStyle.css">
+    <link rel="stylesheet" href="/css/loginStyle.css">
     <link rel="stylesheet" href="/css/style.css">
 
 </head>
