--- a/src/main/resources/templates/allProducts.html
+++ b/src/main/resources/templates/allProducts.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<!-- Code Review: Make products accessible to users who are not logged in. Right now only logged in users can view products. -->
 <head>
     <meta charset="UTF-8">
     <title>All Products</title>
